--- a/app/index.html
+++ b/app/index.html
@@ -18,10 +18,10 @@
 
 	<!-- build:css(.) styles/vendor.css -->
 	<!-- bower:css -->
-	<link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
-	<link rel="stylesheet" href="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.css" />
 	<link rel="stylesheet" href="bower_components/material-steppers/dist/material-steppers.css" />
+	<link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
 	<link rel="stylesheet" href="bower_components/md-color-picker/dist/md-color-picker.css" />
+	<link rel="stylesheet" href="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.css" />
 	<link rel="stylesheet" href="bower_components/mblowfish-core/dist/mblowfish-core.css" />
 	<!-- endbower -->
 	<!-- endbuild -->
@@ -29,6 +29,7 @@
     <!-- build:css(.tmp) styles/main.css -->
 	<!-- injector:css -->
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/module-account.css">
 	<link rel="stylesheet" href="styles/preloader.css">
 	<link rel="stylesheet" href="styles/shop-orders-board.css">
 	<!-- endinjector -->
@@ -42,37 +43,37 @@
     <script src="bower_components/mustache.js/mustache.js"></script>
     <script src="bower_components/seen-core/dist/seen-core.js"></script>
     <script src="bower_components/seen-bank/dist/seen-bank.js"></script>
-    <script src="bower_components/seen-supertenant/dist/seen-supertenant.js"></script>
     <script src="bower_components/seen-user/dist/seen-user.js"></script>
-    <script src="bower_components/seen-shop/dist/seen-shop.js"></script>
-    <script src="bower_components/seen-seo/dist/seen-seo.js"></script>
-    <script src="bower_components/seen-sdp/dist/seen-sdp.js"></script>
-    <script src="bower_components/seen-cms/dist/seen-cms.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-aria/angular-aria.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/seen-tenant/dist/seen-tenant.js"></script>
+    <script src="bower_components/seen-supertenant/dist/seen-supertenant.js"></script>
+    <script src="bower_components/seen-cms/dist/seen-cms.js"></script>
     <script src="bower_components/seen-monitor/dist/seen-monitor.js"></script>
-    <script src="bower_components/flux/dist/Flux.js"></script>
-    <script src="bower_components/am-wb-core/dist/am-wb-core.min.js"></script>
-    <script src="bower_components/ng-appcache/dist/appcache.js"></script>
-    <script src="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.js"></script>
+    <script src="bower_components/seen-shop/dist/seen-shop.js"></script>
+    <script src="bower_components/seen-sdp/dist/seen-sdp.js"></script>
+    <script src="bower_components/seen-seo/dist/seen-seo.js"></script>
     <script src="bower_components/angular-recaptcha/release/angular-recaptcha.js"></script>
     <script src="bower_components/blob-polyfill/Blob.js"></script>
     <script src="bower_components/file-saver.js/FileSaver.js"></script>
     <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
     <script src="bower_components/material-steppers/dist/material-steppers.js"></script>
-    <script src="bower_components/angular-material-persian-datepicker/dist/datePicker.min.js"></script>
     <script src="bower_components/tinymce/tinymce.js"></script>
     <script src="bower_components/tinycolor/tinycolor.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-aria/angular-aria.js"></script>
+    <script src="bower_components/angular-messages/angular-messages.js"></script>
+    <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/md-color-picker/dist/md-color-picker.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/golden-layout/dist/goldenlayout.min.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/flux/dist/Flux.js"></script>
+    <script src="bower_components/am-wb-core/dist/am-wb-core.min.js"></script>
+    <script src="bower_components/ng-appcache/dist/appcache.js"></script>
+    <script src="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.js"></script>
+    <script src="bower_components/angular-material-persian-datepicker/dist/datePicker.min.js"></script>
     <script src="bower_components/weakmap-polyfill/weakmap-polyfill.js"></script>
     <script src="bower_components/loglevel/dist/loglevel.min.js"></script>
-    <script src="bower_components/moment/moment.js"></script>
-    <script src="bower_components/golden-layout/dist/goldenlayout.min.js"></script>
     <script src="bower_components/mblowfish-core/dist/mblowfish-core.js"></script>
     <!-- endbower -->
 	<!-- endbuild -->
@@ -80,7 +81,6 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
 	<!-- injector:js -->
 	<script src="scripts/app.js"></script>
-	<script src="scripts/module-account/index.js"></script>
 	<script src="scripts/module-backup/index.js"></script>
 	<script src="scripts/module-bank/index.js"></script>
 	<script src="scripts/module-cms/index.js"></script>
@@ -91,6 +91,7 @@
 	<script src="scripts/module-spa/index.js"></script>
 	<script src="scripts/module-tenant/index.js"></script>
 	<script src="scripts/module-user/index.js"></script>
+	<script src="scripts/module-account/components/account-toolbar.js"></script>
 	<script src="scripts/module-account/controllers/account-container-ctrl.js"></script>
 	<script src="scripts/module-account/controllers/account-profile-editor-ctrl.js"></script>
 	<script src="scripts/module-account/directives/account-actions-ctrl.js"></script>
@@ -247,14 +248,17 @@
 	mb-sidenavs>
 	<main>
 		<mb-toolbar-group
-			mb-url="/app/main"
-			mb-toolbars="['/dashboard', '/cms']">
-		</mb-toolbar-group>
+			mb-url="/app/toolbar"
+			mb-toolbars="[
+				'/dashboard', 
+				'/cms',
+				'/user/account',
+			]"></mb-toolbar-group>
 		<mb-view
 			mb-mode="docker"></mb-view>
-		<mb-status
-			mb-url="/app/main">
-		</mb-status>
+		<mb-toolbar-group
+			mb-url="/app/status"
+			mb-toolbars="[]"></mb-toolbar-group>
 	</main>
 </body>
 </html>
