--- a/src/modules/cms/editors/content-properties.html
+++ b/src/modules/cms/editors/content-properties.html
@@ -1,205 +1,257 @@
-<md-content>
-	<mb-titled-block 
-		mb-title="Information"
-		mb-more-actions="contentMoreActions"
-		mb-progress="ctrl.isBusy || ctrl.isContentBusy"
-		layout="column"
-		ng-init="contentMoreActions = [{
-			title:'Upload', 
-			icon:'upload',
-			expression: 'ctrl.uploadFile()'
-		}]">
-		<div
-			layout-gt-sm="row"
-			layout="column">
-			<amd-content-preview
-				ng-model="ctrl.content"
-				md-margin
-				flex-gt-sm="100"
-				flex="33">
-			</amd-content-preview>
-			<table
-				md-margin
-				style="min-width: 70%">
-				<tr>
-					<td mb-translate>ID</td>
-					<td>{{::ctrl.content.id}}</td>
-				</tr>
-				<tr>
-					<td mb-translate>Name</td>
-					<td>
-						<mb-inline
-							ng-model="ctrl.content.name"
-							mb-inline-type="text"
-							mb-inline-label="Name"
-							mb-inline-enable="true"
-							mb-inline-on-save="ctrl.updateContent()">{{ctrl.content.name || '...'}}</mb-inline>
-					</td>
-				</tr>
-				<tr>
-					<td mb-translate>Title</td>
-					<td>
-					  <mb-inline
-						  ng-model="ctrl.content.title"
-						  mb-inline-type="text"
-						  mb-inline-label="Title"
-						  mb-inline-enable="true"
-						  mb-inline-on-save="ctrl.updateContent()">
-						  {{ctrl.content.title || '...'}}
-					  </mb-inline>
-					 </td>
-				</tr>
-				<tr>
-					<td mb-translate>Description</td>
-					<td>
-					  <mb-inline
-						  ng-model="ctrl.content.description"
-						  mb-inline-type="textarea"
-						  mb-inline-label="Description"
-						  mb-inline-enable="true"
-						  mb-inline-on-save="ctrl.updateContent()">
-						  {{ctrl.content.description || '...'}}
-					  </mb-inline>
-					 </td>
-				</tr>
-				<tr>
-					<td mb-translate>File name</td>
-					<td>
-					  <mb-inline
-						  ng-model="ctrl.content.file_name"
-						  mb-inline-type="text"
-						  mb-inline-label="File name"
-						  mb-inline-enable="true"
-						  mb-inline-on-save="ctrl.updateContent()">
-						  {{ctrl.content.file_name || '...'}}
-					  </mb-inline>
-					 </td>
-				</tr>
-				<tr>
-					<td mb-translate>File size</td>
-					<td>{{ctrl.content.file_size}}</td>
-				</tr>
-				<tr>
-					<td mb-translate>Media type</td>
-					<td>
-					  <mb-inline
-						  ng-model="ctrl.content.media_type"
-						  mb-inline-type="text"
-						  mb-inline-label="Media type"
-						  mb-inline-enable="true"
-						  mb-inline-on-save="ctrl.updateContent()">
-						  {{ctrl.content.media_type || '...'}}
-					  </mb-inline>
-					 </td>
-				</tr>
-				<tr>
-					<td mb-translate>Mimetype</td>
-					<td>
-					  <mb-inline
-						  ng-model="ctrl.content.mime_type"
-						  mb-inline-type="text"
-						  mb-inline-label="Mimetype"
-						  mb-inline-enable="true"
-						  mb-inline-on-save="ctrl.updateContent()">
-						  {{ctrl.content.mime_type || '...'}}
-					  </mb-inline>
-					 </td>
-				</tr>
-				<tr>
-					<td mb-translate>Downloads count</td>
-					<td>{{::ctrl.content.downloads}}</td>
-				</tr>
-				<tr>
-					<td mb-translate>Creation Date</td>
-					<td>{{ctrl.content.creation_dtime | mbDate}}</td>
-				</tr>
-				<tr>
-					<td mb-translate>Last Modification Date</td>
-					<td>{{ctrl.content.modif_dtime | mbDate}}</td>
-				</tr>
-			</table>
-		</div>
-		<!-- Action bar -->
-		<div 
-			layout="row"
-			ng-show="!ctrl.edit">
-			<span flex></span>
-			<md-button 
-				ng-href="/api/v2/cms/contents/{{ctrl.content.id}}/content"
-				download="{{ctrl.content.file_name || ctrl.content.name}}"
-				target="_blank"
-				class = "md-raised md-primary">
-				<span mb-translate>Download</span>
-			</md-button>
-			<md-button 
-				class = "md-raised md-accent"
-				ng-click="ctrl.deleteContent($event)">
-				<span mb-translate>Delete</span>
-			</md-button>
-		</div>
-	</mb-titled-block>
-
-
-	<!-- 
-	  --  Term taxonomy
-	  -- This section manages term taxonomies of a content and let you
-	  -- add, remove or update the list.
-	  -->
-	<mb-titled-block
-		mb-title="Term Taxonomies"
-		mb-more-actions="termtaxonomyActions"
-		mb-progress="ctrl.isBusy || ctrl.isTermtaxonomiesBusy"
-		layout="column"
-		ng-init="termtaxonomyActions = [{
-			title:'Add new term-taxonomy', 
-			icon:'add',
-			expression: 'ctrl.addTermTaxonomy($event)'
-		}]">
-		<md-chips
-			ng-model="ctrl.termTaxonomies" 
-			name="termTaxonomies" 
-			readonly="true"
-			md-removable="true"
-			md-on-remove="ctrl.deleteTermTaxonomy($chip)"
-			md-max-chips="5" 
-			placeholder="Enter a term"
-			input-aria-label="Terms">
-			<md-chip-template>
-				<strong>{{::$chip.term.name}}</strong>
-				<em>({{::$chip.taxonomy}})</em>
-			</md-chip-template>
-		</md-chips>
-	</mb-titled-block>
+<div
+	layout="column">
+	<!-- Action bar -->
+	<div 
+		layout="row"
+		ng-show="!ctrl.edit">
+		<span flex></span>
+		<md-button 
+			class = "md-raised md-primary"
+			ng-disabled="!ctrl.isDerty()"
+			ng-click="ctrl.updateContent($event)">
+			<span mb-translate>Save</span>
+		</md-button>
+		<md-button 
+			ng-href="/api/v2/cms/contents/{{ctrl.content.id}}/content"
+			download="{{ctrl.content.file_name || ctrl.content.name}}"
+			target="_blank"
+			class = "md-raised md-primary">
+			<span mb-translate>Download</span>
+		</md-button>
+		<md-button 
+			class = "md-raised md-accent"
+			ng-click="ctrl.deleteContent($event)">
+			<span mb-translate>Delete</span>
+		</md-button>
+	</div>
+	<md-content flex>
+		<mb-titled-block 
+			mb-title="Information"
+			mb-more-actions="contentMoreActions"
+			mb-progress="ctrl.isBusy || ctrl.isContentBusy"
+			layout="column"
+			ng-init="contentMoreActions = [{
+				title:'Upload', 
+				icon:'upload',
+				expression: 'ctrl.uploadFile()'
+			}]">
+			<div
+				layout-gt-sm="row"
+				layout="column">
+				<amd-content-preview
+					ng-model="ctrl.model"
+					md-margin
+					flex-gt-sm="100"
+					flex="33">
+				</amd-content-preview>
+				<div
+					layout="column"
+					md-margin
+					style="min-width: 70%">
+					<md-input-container 
+						class="md-block">
+						<label mb-translate>Name</label>
+						<input 
+							ng-model="ctrl.model.name"
+							ng-change="ctrl.setDerty(true)"
+							aria-label="Name">
+					</md-input-container>
+					<md-input-container 
+						class="md-block">
+						<label mb-translate>Title</label>
+						<input 
+							ng-model="ctrl.model.title"
+							ng-change="ctrl.setDerty(true)"
+							aria-label="Title">
+					</md-input-container>
+					<md-input-container 
+						class="md-block">
+						<label mb-translate>Description</label>
+						<textarea 
+							ng-model="ctrl.model.description"
+							ng-change="ctrl.setDerty(true)"
+							aria-label="description"></textarea>
+					</md-input-container>
+					<md-input-container 
+						class="md-block">
+						<label mb-translate>File Name</label>
+						<input 
+							ng-model="ctrl.model.file_name"
+							ng-change="ctrl.setDerty(true)"
+							aria-label="File Name">
+					</md-input-container>
+					<md-input-container 
+						class="md-block">
+						<label mb-translate>File Size</label>
+						<input 
+							disabled
+							ng-model="ctrl.model.file_size"
+							aria-label="File Size">
+					</md-input-container>
+					<md-input-container 
+						class="md-block">
+						<label mb-translate>Media Type</label>
+						<input 
+							ng-model="ctrl.model.media_type"
+							ng-change="ctrl.setDerty(true)"
+							aria-label="Media Type">
+					</md-input-container>
+					<md-input-container 
+						class="md-block">
+						<label mb-translate>Mimetype</label>
+						<input 
+							ng-model="ctrl.model.mime_type"
+							ng-change="ctrl.setDerty(true)"
+							aria-label="Media Type">
+					</md-input-container>
+					
+					<md-input-container 
+						class="md-block">
+						<label mb-translate>Downloads Count</label>
+						<input 
+							disabled
+							ng-model="ctrl.model.downloads"
+							aria-label="Downloads Count">
+					</md-input-container>
+					<md-input-container 
+						class="md-block">
+						<label mb-translate>Creation Date</label>
+						<input 
+							disabled
+							ng-model="ctrl.model.creation_dtime"
+							aria-label="Creation Date">
+					</md-input-container>
+					<md-input-container 
+						class="md-block">
+						<label mb-translate>Last Modification Date</label>
+						<input 
+							disabled
+							ng-model="ctrl.model.modif_dtime"
+							aria-label="Last Modification Date">
+					</md-input-container>
+				</div>
+			</div>
+		</mb-titled-block>
 	
-	<!-- 
-	  --  Metadata
-	  -- In this section you can edit and manage all metadata of a
-	  -- content.
-	  -->
-	<mb-titled-block
-		mb-title="Metadata"
-		mb-more-actions="metadataActions"
-		mb-progress="ctrl.isBusy || ctrl.isMetadataBusy"
-		layout="column"
-		ng-init="metadataActions = [{
-			title: 'Add new metadatum',
-			icon: 'add',
-			expression: 'ctrl.createMetadata($event)'
-		}]">
-		<md-input-container 
-			ng-repeat="m in ctrl.metadata"
-			class="md-icon-float md-icon-right md-block">
-			<label>{{::m.key}}</label>
-			<mb-icon 
-				ng-if="hasAnyRole('tenant.owner', 'cms.editor')">edit</mb-icon>
-			<textarea 
-				ng-enable="hasAnyRole('tenant.owner', 'cms.editor')"
-				ng-model="m.value" 
-				ng-change="ctrl.updateMetadata(m)"
-				ng-model-options="{updateOn:'default change blur',debounce:{default:3000,blur:0,change:0}}"></textarea>
-			<mb-icon
-				ng-click="ctrl.deleteMetadata(m, $event)">delete</mb-icon>
-		</md-input-container>
-	</mb-titled-block>
-</md-content>
+	
+		<!-- 
+		  --  Term taxonomy
+		  -- This section manages term taxonomies of a content and let you
+		  -- add, remove or update the list.
+		  -->
+		<mb-titled-block
+			mb-title="Term Taxonomies"
+			mb-more-actions="termtaxonomyActions"
+			mb-progress="ctrl.isBusy || ctrl.isTermtaxonomiesBusy"
+			layout="column"
+			ng-init="termtaxonomyActions = [{
+				title:'Add new term-taxonomy', 
+				icon:'add',
+				expression: 'ctrl.addTermTaxonomy($event)'
+			}]">
+			<table class="mb-table mb-shop-table">
+				<thead>
+					<tr mb-colors="{color: 'primary-700'}">
+						<td style="width: auto" mb-translate>Title</td>
+						<td style="width: 10%" mb-translate>Type</td>
+						<td mb-translate style="width: 100px;text-align: center;"></td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr
+						ng-repeat="$chip in ctrl.model.termTaxonomies" >
+						<td>{{::$chip.term.name}}</td>
+						<td>{{::$chip.taxonomy}}</td>
+						<td>
+							<div layout="row">
+								<md-button 
+									class="md-icon-button md-accent"
+									ng-click="ctrl.removeTermTaxonomy($chip)"
+									aria-label="Remove Variable">
+									<mb-icon>delete</mb-icon>
+								</md-button>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</mb-titled-block>
+		
+			<!-- 
+			  --  Metadata
+			  -- In this section you can edit and manage all metadata of a
+			  -- content.
+			  -->
+			<mb-titled-block
+				mb-title="{{'Extra Attributes' | translate}}"
+				layout="column"
+				mb-more-actions="metadataActions"
+				ng-init="metadataActions = [{
+					title: 'Add new metadatum',
+					icon: 'add',
+					expression: 'ctrl.addMeta($event)'
+				}]">
+				<table class="mb-table mb-shop-table">
+					<thead>
+						<tr mb-colors="{color: 'primary-700'}">
+							<td style="width: 20%" mb-translate="">Key</td>
+							<td style="width: auto" mb-translate="">Value</td>
+							<td mb-translate style="width: 100px;text-align: center;"></td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr 
+							ng-repeat="meta in ctrl.model.metas"
+							ng-show="meta.key !== 'variant'">
+							<td>
+								<md-input-container 
+									class="md-block">
+									<input 
+										ng-model="meta.key"
+										ng-change="ctrl.setMetaDerty(meta)"
+										aria-label="Meta key">
+								</md-input-container>
+							</td>
+							<td>
+								<md-input-container 
+									class="md-block">
+									<input 
+										ng-model="meta.value"
+										ng-change="ctrl.setMetaDerty(meta)"
+										aria-label="Meta Value">
+								</md-input-container>
+							</td>
+							<td style="text-align: center;">
+								<div layout="row">
+									<md-button 
+										class="md-icon-button md-accent"
+										ng-click="ctrl.setMetaValueByResource(meta, null, $event)"
+										aria-label="Set data to meta value">
+										<mb-icon>auto_fix_high</mb-icon>
+									</md-button>
+									<md-button 
+										class="md-icon-button md-accent"
+										ng-click="ctrl.removeMeta(meta)"
+										aria-label="Remove Variable">
+										<mb-icon>delete</mb-icon>
+									</md-button>
+								</div>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				<div layout="row">
+					<span flex></span>
+					<md-button
+						layout-align="end center"
+						class="md-icon-button md-raised md-primary"
+						ng-click="ctrl.addMeta()"
+						aria-label="add meta data">
+						<mb-icon>add</mb-icon>
+					</md-button>
+				</div>
+			</mb-titled-block>
+		</md-content>
+	</md-content>
+</div>
 
